--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -62,6 +62,11 @@ plugins:
   - search
   - tags
 
+extra_javascript:
+  - assets/js/three.min.js
+  - assets/js/custom/particleBackground.js
+  - assets/js/custom/initParticles.js
+
 extra:
   version:
     provider: mike
