--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -62,10 +62,14 @@ plugins:
   - search
   - tags
 
+extra_css:
+  - assets/css/custom.css
+
 extra_javascript:
   - assets/js/three.min.js
-  - assets/js/custom/particleBackground.js
-  - assets/js/custom/initParticles.js
+  - https://cdnjs.cloudflare.com/ajax/libs/es-module-shims/1.7.3/es-module-shims.min.js
+  - { "path": "assets/js/custom/particleBackground.js", "type": "module" }
+  - { "path": "assets/js/custom/initParticles.js", "type": "module" }
 
 extra:
   version:
