--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -66,8 +66,8 @@ extra_css:
   - assets/css/custom.css
 
 extra_javascript:
-  - assets/js/three.min.js
   - https://cdnjs.cloudflare.com/ajax/libs/es-module-shims/1.7.3/es-module-shims.min.js
+  - { "path": "javascript/importmap.js", "defer": true }
   - { "path": "assets/js/custom/particleBackground.js", "type": "module" }
   - { "path": "assets/js/custom/initParticles.js", "type": "module" }
 
