--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -58,6 +58,7 @@ plugins:
       href: "mailto:{email}"
   - git-revision-date-localized:
       timezone: America/North_Dakota/Center
+  - mike
   - panzoom
   - search
   - tags
@@ -67,7 +68,7 @@ extra_css:
 
 extra_javascript:
   - https://cdnjs.cloudflare.com/ajax/libs/es-module-shims/1.7.3/es-module-shims.min.js
-  - { "path": "javascript/importmap.js", "defer": true }
+  - { "path": "assets/js/importmap.js", "defer": true }
   - { "path": "assets/js/custom/particleBackground.js", "type": "module" }
   - { "path": "assets/js/custom/initParticles.js", "type": "module" }
 
