--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,10 @@ mkdocs-git-authors-plugin>=0.9.5
 mkdocs-panzoom-plugin>=0.1.9
 
 mike>=1.1.2
+
+# AI Plugin Dependencies
+openai>=1.3.0
+python-dotenv>=1.0.0
+requests>=2.31.0
+markdown>=3.5.1
+jinja2>=3.1.2
