--- a/.github/workflows/github_pages.yml
+++ b/.github/workflows/github_pages.yml
@@ -47,8 +47,14 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          # Install local plugin in development mode
+          pip install -e .
+
       - name: Build MkDocs site
-        run: mkdocs build
+        run: |
+          # Set PYTHONPATH to include the local plugins
+          export PYTHONPATH=$PYTHONPATH:$(pwd)
+          mkdocs build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
