--- a/.github/workflows/test_ai_integration.yml
+++ b/.github/workflows/test_ai_integration.yml
@@ -34,9 +34,13 @@ jobs:
 
       - name: Install dependencies
         run: |
+          # Set PYTHONPATH to include the local modules
+          export PYTHONPATH=$PYTHONPATH:$(pwd)
+          
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install flake8 pytest
+          
           # Install local plugin in development mode
           pip install -e .
 
@@ -66,10 +70,9 @@ jobs:
       - name: Test build with AI plugin
         run: |
           echo "🏗️ Building with AI plugin..."
-          # Set PYTHONPATH to include the local plugins directory and the current directory
-          export PYTHONPATH=$PYTHONPATH:$(pwd):$(pwd)/mkdocs_plugins
-          # Verify plugin is discoverable
-          python -c "import mkdocs_plugins; import mkdocs_plugins.ai_plugin; print('✓ Plugin module is importable')"
+          # Set PYTHONPATH to include the local modules
+          export PYTHONPATH=$PYTHONPATH:$(pwd)
+          
           # Build without strict mode for testing
           mkdocs build
           echo "✅ Build completed successfully"
