--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ mkdocs-awesome-nav>=3.1.1
 mkdocs-git-revision-date-localized-plugin>=1.4.5
 mkdocs-git-authors-plugin>=0.9.5
 mkdocs-panzoom-plugin>=0.1.9
+mkdocs-minify-plugin>=0.7.1
 
 mike>=1.1.2
 
