updated styles to alpha.

--- a/docs/.nav.yml
+++ b/docs/.nav.yml
@@ -12,13 +12,26 @@ ignore:
 
 nav:
   - Home: index.md
+
   - AI Demo: ai-demo.md
+
   - Docs-as-Code: docs-as-code.md
+
   - Blog:
     - blog/index.md
+
     - Resources: blog/resources/index.md
-    - Life: blog/life/index.md
+
+    - Life: blog/life
+
+
   - Interests: interests/index.md
+
   - Repositories:
     - repositories/index.md
+
     - Dev Flow Mentor: repositories/dev_flow_mentor/index.md
+
+  - Troubleshooting:
+
+    - troubleshooting/index.md
