--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -77,7 +77,9 @@ plugins:
 
 extra_css:
   - assets/css/custom.css
+  - assets/css/components/test-scene-shared.css
   - assets/css/components/dreamscape.css
+  - assets/css/components/dreamscape-proto4.css
 
 extra_javascript:
   - https://cdnjs.cloudflare.com/ajax/libs/es-module-shims/1.7.3/es-module-shims.min.js
@@ -86,6 +88,7 @@ extra_javascript:
   - { "path": "assets/js/custom/initParticles.js", "type": "module" }
   - { "path": "assets/js/custom/versionSelector.js", "type": "module" }
   - { "path": "assets/js/components/dreamscape/dreamscape.js", "type": "module" }
+  - { "path": "assets/js/components/dreamscape-proto4/dreamscape-proto4.js", "type": "module" }
 
 extra:
   version:
