scaffolding pattern for new test scenes.

--- a/docs/.nav.yml
+++ b/docs/.nav.yml
@@ -32,6 +32,4 @@ nav:
 
     - Dev Flow Mentor: repositories/dev_flow_mentor/index.md
 
-  - Troubleshooting:
-
-    - troubleshooting/index.md
+  - Troubleshooting: troubleshooting
