--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -80,6 +80,7 @@ extra_css:
   - assets/css/components/test-scene-shared.css
   - assets/css/components/dreamscape.css
   - assets/css/components/dreamscape-proto4.css
+  - assets/css/components/dreamscape-proto6.css
 
 extra_javascript:
   - https://cdnjs.cloudflare.com/ajax/libs/es-module-shims/1.7.3/es-module-shims.min.js
@@ -89,6 +90,7 @@ extra_javascript:
   - { "path": "assets/js/custom/versionSelector.js", "type": "module" }
   - { "path": "assets/js/components/dreamscape/dreamscape.js", "type": "module" }
   - { "path": "assets/js/components/dreamscape-proto4/dreamscape-proto4.js", "type": "module" }
+  - { "path": "assets/js/components/dreamscape-proto6/dreamscape-proto6.js", "type": "module" }
 
 extra:
   version:
