--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -82,6 +82,7 @@ extra_css:
   - assets/css/components/dreamscape-proto4.css
   - assets/css/components/dreamscape-proto6.css
   - assets/css/components/ghibli-masterpiece.css
+  - assets/css/components/color-particle-artifact.css
 
 extra_javascript:
   - https://cdnjs.cloudflare.com/ajax/libs/es-module-shims/1.7.3/es-module-shims.min.js
@@ -93,6 +94,7 @@ extra_javascript:
   - { "path": "assets/js/components/dreamscape-proto4/dreamscape-proto4.js", "type": "module" }
   - { "path": "assets/js/components/dreamscape-proto6/dreamscape-proto6.js", "type": "module" }
   - { "path": "assets/js/components/ghibli-masterpiece/ghibli-masterpiece.js", "type": "module" }
+  - { "path": "assets/js/components/color-particle-artifact/color-particle-artifact.js", "type": "module" }
 
 extra:
   version:
