--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -83,6 +83,7 @@ extra_css:
   - assets/css/components/dreamscape-proto6.css
   - assets/css/components/ghibli-masterpiece.css
   - assets/css/components/color-particle-artifact.css
+  - assets/css/components/physics-playground.css
 
 extra_javascript:
   - https://cdnjs.cloudflare.com/ajax/libs/es-module-shims/1.7.3/es-module-shims.min.js
@@ -95,6 +96,7 @@ extra_javascript:
   - { "path": "assets/js/components/dreamscape-proto6/dreamscape-proto6.js", "type": "module" }
   - { "path": "assets/js/components/ghibli-masterpiece/ghibli-masterpiece.js", "type": "module" }
   - { "path": "assets/js/components/color-particle-artifact/color-particle-artifact.js", "type": "module" }
+  - { "path": "assets/js/components/physics-playground/physics-playground.js", "type": "module" }
 
 extra:
   version:
