adding a few more navigation plugins.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,9 +16,11 @@ theme:
 
   features:
     - navigation.instant
+    - navigation.instang.progress
     - navigation.tracking
-    - navigation.expand
     - navigation.indexes
+    - navigation.prune
+    - navigation.footer
     - content.code.copy
     - content.code.annotate
   
