--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -89,6 +89,8 @@ extra_css:
   - assets/css/components/ghibli-masterpiece.css
   - assets/css/components/color-particle-artifact.css
   - assets/css/components/physics-playground.css
+  - assets/css/components/kaleidoscopic-scene.css
+  - assets/css/components/intergalactic-scene.css
 
 extra_javascript:
   - https://cdnjs.cloudflare.com/ajax/libs/es-module-shims/1.7.3/es-module-shims.min.js
@@ -102,6 +104,8 @@ extra_javascript:
   - { "path": "assets/js/components/ghibli-masterpiece/ghibli-masterpiece.js", "type": "module" }
   - { "path": "assets/js/components/color-particle-artifact/color-particle-artifact.js", "type": "module" }
   - { "path": "assets/js/components/physics-playground/physics-playground.js", "type": "module" }
+  - { "path": "assets/js/components/kaleidoscopic-scene/kaleidoscopic-scene.js", "type": "module" }
+  - { "path": "assets/js/components/intergalactic-scene/intergalactic-scene.js", "type": "module" }
 
 extra:
   version:
