--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -91,6 +91,7 @@ extra_css:
   - assets/css/components/physics-playground.css
   - assets/css/components/kaleidoscopic-scene.css
   - assets/css/components/intergalactic-scene.css
+  - assets/css/components/aiPlayground/aiPlayground.css
 
 extra_javascript:
   - https://cdnjs.cloudflare.com/ajax/libs/es-module-shims/1.7.3/es-module-shims.min.js
@@ -109,6 +110,8 @@ extra_javascript:
   - { "path": "assets/js/components/physics-playground/physics-playground.js", "type": "module" }
   - { "path": "assets/js/components/kaleidoscopic-scene/kaleidoscopic-scene.js", "type": "module" }
   - { "path": "assets/js/components/intergalactic-scene/intergalactic-scene.js", "type": "module" }
+  - { "path": "assets/js/components/aiPlayground/aiPlayground.js", "type": "module" }
+  - { "path": "assets/js/custom/zoompan.js", "type": "module" }
 
 extra:
   version:
