chore: simplifying logic to occur weekly.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,142 +8,9 @@ updates:
   - package-ecosystem: "pip" # For Python dependencies via requirements.txt
     directory: "/" # Location of package manifests (requirements.txt)
     schedule:
-      interval: "monthly"  # Using monthly for bi-weekly effect with 2 separate configs
+      interval: "weekly"
       day: "monday"
       time: "09:00"
-    # Creating an effectively bi-weekly schedule by using groups
-    groups:
-      group-a:
-        patterns:
-          - "a*"
-          - "b*"
-          - "c*"
-          - "d*"
-          - "e*"
-          - "f*"
-          - "g*"
-          - "h*"
-          - "i*"
-          - "j*"
-          - "k*"
-          - "l*"
-          - "m*"
-      group-b:
-        patterns:
-          - "n*"
-          - "o*"
-          - "p*"
-          - "q*"
-          - "r*"
-          - "s*"
-          - "t*"
-          - "u*"
-          - "v*"
-          - "w*"
-          - "x*"
-          - "y*"
-          - "z*"
-    # Ignore rules to prevent breaking changes
-    ignore:
-      # Core MkDocs - foundation of the documentation site
-      - dependency-name: "mkdocs"
-        update-types: ["version-update:semver-major"]
-      
-      # MkDocs Material theme - provides the site appearance
-      - dependency-name: "mkdocs-material"
-        update-types: ["version-update:semver-major"]
-      
-      # MkDocs plugins - extend site functionality
-      - dependency-name: "mkdocs-awesome-nav"
-        update-types: ["version-update:semver-major"]
-      - dependency-name: "mkdocs-git-revision-date-localized-plugin"
-        update-types: ["version-update:semver-major"]
-      - dependency-name: "mkdocs-git-authors-plugin"
-        update-types: ["version-update:semver-major"]
-      - dependency-name: "mkdocs-panzoom-plugin"
-        update-types: ["version-update:semver-major"]
-      - dependency-name: "mkdocs-minify-plugin"
-        update-types: ["version-update:semver-major"]
-      
-      # Mike - versioning tool for MkDocs
-      - dependency-name: "mike"
-        update-types: ["version-update:semver-major"]
-      
-      # Markdown extensions
-      - dependency-name: "pymdown-extensions"
-        update-types: ["version-update:semver-major"]
-      - dependency-name: "markdown"
-        update-types: ["version-update:semver-major"]
-      
-      # AI-related dependencies
-      - dependency-name: "openai"
-        update-types: ["version-update:semver-major"]
-      
-      # Core dependencies that could affect templates and rendering
-      - dependency-name: "jinja2"
-        update-types: ["version-update:semver-major"]
-      
-      # HTTP and environment handling
-      - dependency-name: "requests"
-        update-types: ["version-update:semver-minor", "version-update:semver-major"]
-      - dependency-name: "python-dotenv"
-        update-types: ["version-update:semver-major"]
-
-  # Second update block for the second half of the month - creating bi-weekly effect
-  - package-ecosystem: "pip"
-    directory: "/"
-    schedule:
-      interval: "monthly"
-      day: "monday"
-      time: "09:00"
-      # This adds 2 weeks offset to the schedule
-      # First run will be on the 1st Monday, this will run on the 3rd Monday
-      day-of-month: 15
-    # Ignore rules to prevent breaking changes
-    ignore:
-      # Core MkDocs - foundation of the documentation site
-      - dependency-name: "mkdocs"
-        update-types: ["version-update:semver-major"]
-      
-      # MkDocs Material theme - provides the site appearance
-      - dependency-name: "mkdocs-material"
-        update-types: ["version-update:semver-major"]
-      
-      # MkDocs plugins - extend site functionality
-      - dependency-name: "mkdocs-awesome-nav"
-        update-types: ["version-update:semver-major"]
-      - dependency-name: "mkdocs-git-revision-date-localized-plugin"
-        update-types: ["version-update:semver-major"]
-      - dependency-name: "mkdocs-git-authors-plugin"
-        update-types: ["version-update:semver-major"]
-      - dependency-name: "mkdocs-panzoom-plugin"
-        update-types: ["version-update:semver-major"]
-      - dependency-name: "mkdocs-minify-plugin"
-        update-types: ["version-update:semver-major"]
-      
-      # Mike - versioning tool for MkDocs
-      - dependency-name: "mike"
-        update-types: ["version-update:semver-major"]
-      
-      # Markdown extensions
-      - dependency-name: "pymdown-extensions"
-        update-types: ["version-update:semver-major"]
-      - dependency-name: "markdown"
-        update-types: ["version-update:semver-major"]
-      
-      # AI-related dependencies
-      - dependency-name: "openai"
-        update-types: ["version-update:semver-major"]
-      
-      # Core dependencies that could affect templates and rendering
-      - dependency-name: "jinja2"
-        update-types: ["version-update:semver-major"]
-      
-      # HTTP and environment handling
-      - dependency-name: "requests"
-        update-types: ["version-update:semver-minor", "version-update:semver-major"]
-      - dependency-name: "python-dotenv"
-        update-types: ["version-update:semver-major"]
     # Ignore rules to prevent breaking changes
     ignore:
       # Core MkDocs - foundation of the documentation site
