--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -93,6 +93,7 @@ extra_css:
   - assets/css/landing-page-headings.css
   - assets/css/landing-page-tabs.css
   - assets/css/landing-page-cta.css
+  - assets/css/landing-page-interactive.css
   - assets/css/components/test-scene-shared.css
   - assets/css/components/dreamscape.css
   - assets/css/components/dreamscape-proto4.css
@@ -118,6 +119,10 @@ extra_javascript:
   - { "path": "assets/js/custom/typewriter-fallback.js", "type": "module" }
   - { "path": "assets/js/custom/scrollEffects.js", "type": "module" }
   - { "path": "assets/js/custom/networkNodes.js", "type": "module" }
+  - { "path": "assets/js/custom/threeBackground.js", "type": "module" }
+  - { "path": "assets/js/custom/threeBackgroundFallback.js", "type": "module" }
+  - { "path": "assets/js/custom/smoothScroll.js", "type": "module" }
+  - { "path": "assets/js/custom/initModernUI.js", "type": "module" }
   - { "path": "assets/js/components/dreamscape/dreamscape.js", "type": "module" }
   - { "path": "assets/js/components/dreamscape-proto4/dreamscape-proto4.js", "type": "module" }
   - { "path": "assets/js/components/dreamscape-proto6/dreamscape-proto6.js", "type": "module" }
