--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -94,6 +94,9 @@ extra_css:
   - assets/css/landing-page-tabs.css
   - assets/css/landing-page-cta.css
   - assets/css/landing-page-interactive.css
+  - assets/css/landing-page-typewriter-fix.css
+  - assets/css/section-transitions.css
+  - assets/css/scroll-indicator-fix.css
   - assets/css/components/test-scene-shared.css
   - assets/css/components/dreamscape.css
   - assets/css/components/dreamscape-proto4.css
@@ -122,6 +125,8 @@ extra_javascript:
   - { "path": "assets/js/custom/threeBackground.js", "type": "module" }
   - { "path": "assets/js/custom/threeBackgroundFallback.js", "type": "module" }
   - { "path": "assets/js/custom/smoothScroll.js", "type": "module" }
+  - { "path": "assets/js/custom/performanceMonitor.js", "type": "module" }
+  - { "path": "assets/js/custom/sectionTransitions.js", "type": "module" }
   - { "path": "assets/js/custom/initModernUI.js", "type": "module" }
   - { "path": "assets/js/components/dreamscape/dreamscape.js", "type": "module" }
   - { "path": "assets/js/components/dreamscape-proto4/dreamscape-proto4.js", "type": "module" }
