chore: subtle mkdocs change

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,10 @@ site_description: >
 theme:
   name: material
 
+  font:
+    text: Roboto
+    code: Fira Code
+
   icon:
     repo: fontawesome/brands/github
   
