fix search feature name

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,7 +20,7 @@ theme:
 
   features:
     - search.suggest
-    - search.highligt
+    - search.highlight
     - search.share
     - navigation.instant
     - navigation.instang.progress
