feat: dynamic teal and tan theme

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,16 +34,16 @@ theme:
   palette:
     # Dark mode (now listed first to make it default)
     - scheme: slate
-      primary: blue
-      accent: blue
+      primary: "#008080"
+      accent: "#d2b48c"
       toggle:
         icon: material/weather-sunny
         name: Switch to light mode
     
     # Light mode
     - scheme: default
-      primary: indigo
-      accent: indigo
+      primary: "#008080"
+      accent: "#d2b48c"
       toggle:
         icon: material/weather-night
         name: Switch to dark mode
@@ -88,6 +88,7 @@ plugins:
 
 extra_css:
   - assets/css/custom.css
+  - assets/css/theme/colors.css
   - assets/css/common/animations.css
   - assets/css/pages/home/base.css
   - assets/css/pages/home/extras.css
