Fix nav YAML indentation

--- a/docs/.nav.yml
+++ b/docs/.nav.yml
@@ -1,5 +1,5 @@
+---
 ignore:
-
   - docs/overrides
   - scripts
   - .gitignore
@@ -12,27 +12,18 @@ ignore:
 
 nav:
   - Home: index.md
-
   - AI Demo: ai-demo/index.md
-
   - AI Playground:
-    - Playground: ai-demo/ai-playground/playground/index.md
-
+      - Playground: ai-demo/ai-playground/playground/index.md
   - Docs-as-Code: docs-as-code.md
-
   - Blog:
-    - blog/index.md
-    - Resources: blog/resources/index.md
-
-    - Life:
-      - blog/life/index.md
-      - blog/life/test_scenes
-
-
+      - blog/index.md
+      - Resources: blog/resources/index.md
+      - Life:
+          - blog/life/index.md
+          - blog/life/test_scenes
   - Interests: interests/index.md
-
   - Repositories:
-    - repositories/index.md
-    - Dev Flow Mentor: repositories/dev_flow_mentor/index.md
-
-  - Troubleshooting: troubleshooting
+      - repositories/index.md
+      - Dev Flow Mentor: repositories/dev_flow_mentor/index.md
+  - Troubleshooting: troubleshooting/index.md
