--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,16 +34,16 @@ theme:
   palette:
     # Dark mode (now listed first to make it default)
     - scheme: slate
-      primary: blue
-      accent: blue
+      primary: blue grey
+      accent: light blue
       toggle:
         icon: material/weather-sunny
         name: Switch to light mode
     
     # Light mode
     - scheme: default
-      primary: indigo
-      accent: indigo
+      primary: blue grey
+      accent: blue
       toggle:
         icon: material/weather-night
         name: Switch to dark mode
