--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,16 +36,16 @@ theme:
   palette:
     # Dark mode (now listed first to make it default)
     - scheme: slate
-      primary: blue grey
-      accent: light blue
+      primary: teal
+      accent: amber
       toggle:
         icon: material/weather-sunny
         name: Switch to light mode
     
     # Light mode
     - scheme: default
-      primary: blue grey
-      accent: blue
+      primary: teal
+      accent: amber
       toggle:
         icon: material/weather-night
         name: Switch to dark mode
